# whisper-web

./: .dockerignore  .flake8  .gitignore  .prettierignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  build.sh  check.sh  index.html  main.py  package.json  pyproject.toml  test_app.py  vite.config.ts
.github/workflows/: build.yml
assets/: index.05996c6f.js  index.08ff9814.js  index.3242168d.js  index.48b76c14.js  index.4bb5e7f9.js  index.50630ffb.js  index.58b1a39f.js  index.5d7c0f5a.js  index.5dfcb3f9.css  index.7b0a4cfa.js  index.8097c718.css  index.8550c593.css  index.983eea31.js  index.9dcae4d7.js  index.a6a579a1.css  index.d27c61ab.js  index.d956ef6f.js  index.e47080cf.js  index.f155da6b.js  index.f63e2c96.js
src/: App.css  App.tsx
