[tool.poetry]
authors = []
description = ""
name = "whisper-web"
version = "0.0.0"

[tool.poetry.dependencies]
boto3 = "^1"
ffmpeg-python = "^0.2"
python = ">=3.9,<3.10"
torch = [
  {markers = "sys_platform == 'linux' and platform_machine == 'x86_64'", url = "https://download.pytorch.org/whl/cpu/torch-1.13.0%2Bcpu-cp39-cp39-linux_x86_64.whl"},
  {markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", url = "https://download.pytorch.org/whl/cpu/torch-1.13.0-cp39-none-macosx_11_0_arm64.whl"},
]
transformers = "^4"
whisper = {git = "https://github.com/openai/whisper.git", rev = "eff383b27b783e280c089475852ba83f20f64998"}
youtube-dl = "^2021"

[tool.poetry.dev-dependencies]
black = "^22"
flake8 = "^6"
isort = "^5"
mypy = "^0.991"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "boto3"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "youtube_dl"
